[gd_scene load_steps=15 format=3 uid="uid://dix2dpe5161ln"]

[ext_resource type="Script" path="res://src/game.gd" id="1_e1l3b"]
[ext_resource type="PackedScene" uid="uid://coq2iqn1v0an" path="res://src/world.tscn" id="1_hng2w"]
[ext_resource type="Script" path="res://src/gui/heads_up_display.gd" id="2_66a4j"]
[ext_resource type="Shader" path="res://resources/vignette.gdshader" id="2_sdbiq"]
[ext_resource type="Theme" uid="uid://cfegnsa7ejbi2" path="res://resources/heads_up_display.theme" id="3_b0tar"]
[ext_resource type="FontVariation" uid="uid://cy36dde3oif13" path="res://assets/fonts/PressStart2P_FontVar.res" id="5_mcdie"]
[ext_resource type="Script" path="res://src/gui/main_menu.gd" id="5_vcdsf"]
[ext_resource type="Theme" uid="uid://bjp4ehh3j8k2e" path="res://resources/default.theme" id="6_7lkc8"]
[ext_resource type="PackedScene" uid="uid://48qovg4wh6vv" path="res://src/end_screens/mineral_end_screen.tscn" id="8_i3ivc"]
[ext_resource type="PackedScene" uid="uid://c7ad2qxtgboh" path="res://src/end_screens/camera_end_screen.tscn" id="9_7dyt4"]
[ext_resource type="PackedScene" uid="uid://bq54cl7k4kl3v" path="res://src/end_screens/hole_end_screen.tscn" id="10_605c7"]
[ext_resource type="AudioStream" uid="uid://bpkrrqydsxhwo" path="res://assets/music/CaveMusic.ogg" id="11_us8sk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tqtqg"]
shader = ExtResource("2_sdbiq")
shader_parameter/outerRadius = 1.035
shader_parameter/MainAlpha = 0.765

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tgbui"]

[node name="Game" type="Node"]
script = ExtResource("1_e1l3b")

[node name="MainWorld" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="MainWorld"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 4

[node name="ColorRect" type="ColorRect" parent="MainWorld/SubViewportContainer"]
material = SubResource("ShaderMaterial_tqtqg")
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="MainWorld/SubViewportContainer"]
handle_input_locally = false
use_occlusion_culling = true
canvas_item_default_texture_filter = 0
audio_listener_enable_3d = true
size = Vector2i(320, 180)
render_target_update_mode = 4

[node name="World" parent="MainWorld/SubViewportContainer/SubViewport" instance=ExtResource("1_hng2w")]
unique_name_in_owner = true

[node name="HeadsUpDisplay" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 20
script = ExtResource("2_66a4j")

[node name="Control" type="Control" parent="HeadsUpDisplay"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="InventoryContainer" type="HBoxContainer" parent="HeadsUpDisplay/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.73
anchor_top = 0.87
anchor_right = 0.98
anchor_bottom = 0.98
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 16

[node name="ItemContainer1" type="PanelContainer" parent="HeadsUpDisplay/Control/InventoryContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_b0tar")

[node name="ItemTextureRect1" type="TextureRect" parent="HeadsUpDisplay/Control/InventoryContainer/ItemContainer1"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1

[node name="ItemContainer2" type="PanelContainer" parent="HeadsUpDisplay/Control/InventoryContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_b0tar")

[node name="ItemTextureRect2" type="TextureRect" parent="HeadsUpDisplay/Control/InventoryContainer/ItemContainer2"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1

[node name="ItemContainer3" type="PanelContainer" parent="HeadsUpDisplay/Control/InventoryContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_b0tar")

[node name="ItemTextureRect3" type="TextureRect" parent="HeadsUpDisplay/Control/InventoryContainer/ItemContainer3"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1

[node name="MainMenu" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("5_vcdsf")

[node name="Control" type="Control" parent="MainMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_7lkc8")

[node name="PanelContainer" type="PanelContainer" parent="MainMenu/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.08
anchor_right = 0.45
anchor_bottom = 0.92

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/Control/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSeparator3" type="HSeparator" parent="MainMenu/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 26
theme_override_styles/separator = SubResource("StyleBoxEmpty_tgbui")

[node name="Label" type="Label" parent="MainMenu/Control/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(480, 90)
layout_mode = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("5_mcdie")
theme_override_font_sizes/font_size = 46
text = "MURPHY'S CAVE"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="MainMenu/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 48
theme_override_styles/separator = SubResource("StyleBoxEmpty_tgbui")

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 56
theme_override_constants/margin_top = 26
theme_override_constants/margin_right = 56
theme_override_constants/margin_bottom = 26

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/Control/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MainMenu/Control/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../ExitButton")

[node name="Label" type="Label" parent="MainMenu/Control/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="MainMenu/Control/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_tgbui")

[node name="SettingsButton" type="Button" parent="MainMenu/Control/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainMenu/Control/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SettingsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="MainMenu/Control/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_tgbui")

[node name="ExitButton" type="Button" parent="MainMenu/Control/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../PlayButton")
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../PlayButton")

[node name="Label" type="Label" parent="MainMenu/Control/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "EXIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="MainMenu/Control"]
layout_mode = 0
offset_left = 952.0
offset_top = 32.0
offset_right = 1251.0
offset_bottom = 110.0
theme_override_constants/line_spacing = 8
text = "Made by:
JulxsIV
SortexTheGuy"

[node name="MineralEndScreen" parent="." instance=ExtResource("8_i3ivc")]
visible = false

[node name="CameraEndScreen" parent="." instance=ExtResource("9_7dyt4")]
visible = false

[node name="HoleEndScreen" parent="." instance=ExtResource("10_605c7")]
visible = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_us8sk")
volume_db = -16.0
autoplay = true
bus = &"Music"
playback_type = 1
parameters/looping = true
